# easy_OS

./: README.md  test.md
app/: 04task_info.rs
os/: Cargo.toml  Makefile  build.rs  gdb_init.gdb
os/src/: batch.rs  config.rs  lang_items.rs  loader.rs  main.rs  sbi.rs  timer.rs
os/src/boards/: mod.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/sync/: mod.rs  up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: mod.rs  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs
user/: Cargo.toml  Makefile
user/.cargo/: config.toml
user/src/: build.py  console.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
