[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "ssh://git@github.com/rcore-os/riscv.git", features = ["inline-asm"] }
log = "0.4"

[profile.release]
debug = true
opt-level = 0               # 优化级别,最低是0,最高是3, 0方便debug
overflow-checks = false     # 关闭整数溢出检查